# EpicEvents

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 55fb8f533401_ajout_d_un_user_id_pour_les_events.py  57544bbe17c8_update_email_column_to_unique_true.py  a132ea576c93_update.py  a8ed3944ecf3_setup_all_first_model.py
app/: main.py  session.py  settings.py  style.tcss
app/cli/: Eventview.py  chronometre.py  clientView.py  contractView.py  dashboard.py  login.py  userList.py  userView.py
app/cli/login/: login.css  login.py
app/core/: security.py
app/crud/: __init__.py  base.py  crud_auth.py  crud_client.py  crud_contract.py  crud_event.py  crud_user.py
app/models/: __init__.py  client.py  contract.py  event.py  user.py
app/tests/: test_db_connection.py
