[tool.poetry]
name = "epic-events-crm"
version = "0.1.0"
description = "Un CRM pour Epic Events."
authors = ["Mickael Fioretti"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^1.4.27"
sqlmodel = "^0.0.4"
pydantic = "^1.9.0"
textual = "^0.1.18"    # Version à vérifier selon les dernières mises à jour

# Dépendance pour la base de données, par exemple, psycopg2 pour PostgreSQL
# psycopg2-binary = "^2.9.3" 

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
pyright = "^1.1.191"
ruff = "^0.1.0"

[tool.pyright]
typeCheckingMode = "basic"
reportIncompatibleVariableOverride = false

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
